# rusty_wallclock

./: Cargo.toml  README.md  index.html
backend/: Cargo.toml  build.rs  settings.json.tmpl
backend/src/: main.rs  settings.rs
backend/src/api/: weather.rs
common/: Cargo.toml
common/src/model/: mod.rs  settings.rs
common/src/model/weather/: current.rs  forecast.rs  mod.rs
src/: main.rs
src/components/: clock.rs
ui/: Cargo.toml  index.html
ui/src/: main.rs
ui/src/components/: clock.rs  mod.rs  weather.rs
